edge components perserving